name:                reflex-material
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/alasconnect/reflex-material#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jones
maintainer:          bcj@alasconnect.com
copyright:           AlasConnect
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Material
                     , Reflex.Material.Basic
                     , Reflex.Material.Button
                     , Reflex.Material.Card
                     , Reflex.Material.Checkbox
                     , Reflex.Material.Drawer
                     , Reflex.Material.FormField
                     , Reflex.Material.LayoutGrid
                     , Reflex.Material.List
                     , Reflex.Material.Radio
                     , Reflex.Material.Select
                     , Reflex.Material.TextField
                     , Reflex.Material.Toolbar
                     , Reflex.Material.Types
                     , Reflex.Material.Typography
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , reflex-dom >= 0.4 && < 0.5
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

executable reflex-material-exe
  hs-source-dirs:      example
  main-is:             Main.hs
  other-modules:       Buttons
                     , Cards
                     , FormElement
                     , LayoutGrid
                     , Lists
                     , Toolbar
                     , Typography
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
                     , reflex-material
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

test-suite reflex-material-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reflex-material
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alasconnect/reflex-material
